config/ingress-second.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-second
spec:
  rules:
    - host: banana.nashicorp.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 80
